--- a/admin-ges-users.html
+++ b/admin-ges-users.html
@@ -186,6 +186,27 @@
     </div>
     <!-- /Modal add user -->
 
+    <!-- Change statut users -->
+    <div class="modal fade" id="changeState" tabindex="-1" aria-labelledby="changeStateLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="content-modal text-center">
+                <h5>Bloquer l'utilisateur</h5>
+                <div class="button-action">
+                    <a href="">Oui</a>
+                    <a href="">Non</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>      
+    <!-- >Change statut users -->
+
     <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.dataTables.min.js"></script>
