--- a/nos-tarifs.html
+++ b/nos-tarifs.html
@@ -24,8 +24,8 @@
                 <ul class="menu-lg">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="reserver.html">Réserver</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <a href="login.html" class="button">Connexion</a>
             </nav>
@@ -39,8 +39,8 @@
                     <ul>
                         <li><a href="index.html">Accueil</a></li>
                         <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="reserver.html">Réserver</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="login.html">Connexion</a></li>
                     </ul>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
-                            <p>6H - 7H</p>
+                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
-                            <p>6H - 7H</p>
+                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
-                            <p>6H - 7H</p>
+                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
-                            <p>6H - 7H</p>
+                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
-                            <p>6H - 7H</p>
+                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     <div class="tarif-content">
                         <div class="location">
                             <h4><span>Pointe-Noire</span> - <span>Brazzaville</span></h4>
-                            <p>6H - 7H</p>
+                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
                     </div>
                 </div>
@@ -164,10 +164,10 @@
                                     <a class="footer-link" href="nos-tarifs.html">Nos Tarifs</a>
                                 </li>
                                 <li class="footer-list">
-                                    <a class="footer-link" href="contact.html">Contact</a>
+                                    <a class="footer-link" href="reserver.html">Résever</a>
                                 </li>
                                 <li class="footer-list">
-                                    <a class="footer-link" href="reserver.html">Résever</a>
+                                    <a class="footer-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
