--- a/user-compte.html
+++ b/user-compte.html
@@ -48,45 +48,139 @@
 
         <div class="my-profile">
             <div class="info-pers">
-                <h5>Information personnelle</h5>
-                <div class="user-profile">
-                    <div class="img">
-                        <img src="img/profile/profile.png" alt="" width="150px" height="150px">
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12 col-md-6">
-                            Nom
-                        </div>
-                        <div class="col-sm-12 col-md-6">
-                            Numéro
+                <div class="user-profile row">
+                    <div class="col-md-3 col-sm-12">
+                        <div class="img">
+                            <img src="img/profile/profile.png" alt="" width="150px" height="150px">
                         </div>
                     </div>
+                    <div class="col-md-9 col-sm-12">
+                        <div class="prof row">
+                            <div class="col-md-6 col-sm-12">
+                                <div class="prof-form">
+                                    <h5>Nom :</h5>
+                                    <span>ALaxander Poaty</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-12">
+                                <div class="prof-form">
+                                    <h5>Email :</h5>
+                                    <span>alexander_p@gmail.com</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-12">    
+                                <div class="prof-form">
+                                    <h5>Numéro :</h5>
+                                    <span>066065050</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-12">    
+                                <div class="prof-form">
+                                    <h5>Date de naissance :</h5>
+                                    <span>1/1/1990</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-12">    
+                                <div class="prof-form">
+                                    <h5>Ville :</h5>
+                                    <span>Pointe-Noire</span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-12">    
+                                <div class="prof-form">
+                                    <h5>Rôle :</h5>
+                                    <span>Admin</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="info-update">
+                    <button data-bs-toggle="modal" data-bs-target="#editProfile">Modifier profil</button>
                 </div>
             </div>
         </div>
 
     </section>
 
-    <!-- Change statut reservation -->
-    <div class="modal fade" id="changeState" tabindex="-1" aria-labelledby="changeStateLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+    <!-- Modal edit profile -->
+    <div class="modal fade" id="editProfile" tabindex="-1" aria-labelledby="editProfileLabel" aria-hidden="true">
+        <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
+              <h5 class="modal-title" id="editProfileLabel">Edition du profil</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <div class="content-modal text-center">
-                <h5>Validation de la réservation</h5>
-                <div class="button-action">
-                    <a href="">Oui</a>
-                    <a href="">Non</a>
-                </div>
+              <div class="form-edit">
+                <form action="">
+                  <div class="user_pic">
+                    <img src="img/" alt="">
+                    <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                    <input type="file" name="picture" id="add_pic">
+                  </div>
+                  <div class="form-group">
+                    <label for="full_name">Nom et prénom</label>
+                    <input type="text" name="full_name" id="full_name">
+                  </div>
+                  <div class="form-group">
+                    <label for="birthday">Date de naissance</label>
+                    <input type="date" name="birthday" id="birthday">
+                  </div>
+                  <div class="form-group">
+                    <label for="city">Ville</label>
+                    <input type="text" name="city" id="city">
+                  </div>
+                  <div class="form-group">
+                    <label for="phone">Téléphone</label>
+                    <input type="tel" name="phone" id="phone">
+                  </div>
+                  <div class="form-submit">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#editPassword" data-bs-dismiss="modal">Changer mot de passe</a href="#">
+                    <button type="submit">Mettre à jour</button>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
         </div>
-      </div>      
-    <!-- >Change statut reservation -->
+      </div>
+      <!-- /Modal edit profile -->
+  
+      <!-- Change password -->
+      <div class="modal fade" id="editPassword" tabindex="-1" aria-labelledby="editPasswordLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="editPasswordLabel">Changer mot de passe</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="form-edit">
+                <form action="">
+                  <div class="form-group">
+                    <label for="old_pwd">Ancien mot de passe</label>
+                    <input type="password" name="old_pwd" id="old_pwd" placeholder="Tapez votre ancien mot de passe">
+                  </div>
+                  <div class="form-group">
+                    <label for="pwd">Nouveau mot de passe</label>
+                    <input type="password" name="pwd" id="pwd" placeholder="Tapez votre nouveau mot de passe">
+                  </div>
+                  <div class="form-group">
+                    <label for="conf_pwd">Confirmer votre mot de passe</label>
+                    <input type="password" name="conf_pwd" id="conf_pwd" placeholder="Retapez votre nouveau mot de passe">
+                  </div>
+                  <div class="form-submit">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#editProfile" data-bs-dismiss="modal">Editer profil</a>
+                    <button type="submit">Mettre à jour</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Change password -->
 
     <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
