--- a/nos-tarifs.html
+++ b/nos-tarifs.html
@@ -66,72 +66,56 @@
                 <div class="box-tarif">
                     <div class="thum">
                         <img src="img/destination/brazzaville.jpg" alt="">
-                        <h3>15 000 <span>Fcfa</span></h3>
                     </div>
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
                             <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
-                    </div>
-                </div>
-                <div class="box-tarif">
-                    <div class="thum">
-                        <img src="img/destination/brazzaville.jpg" alt="">
-                        <h3>15 000 <span>Fcfa</span></h3>
-                    </div>
-                    <div class="tarif-content">
-                        <div class="location">
-                            <h4>Pointe-Noire - Brazzaville</h4>
-                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
+                        <div class="price-dest">
+                            <h3>15 000 <span>Fcfa</span></h3>
                         </div>
                     </div>
                 </div>
                 <div class="box-tarif">
                     <div class="thum">
                         <img src="img/destination/brazzaville.jpg" alt="">
-                        <h3>15 000 <span>Fcfa</span></h3>
                     </div>
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
                             <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
-                    </div>
-                </div>
-                <div class="box-tarif">
-                    <div class="thum">
-                        <img src="img/destination/brazzaville.jpg" alt="">
-                        <h3>15 000 <span>Fcfa</span></h3>
-                    </div>
-                    <div class="tarif-content">
-                        <div class="location">
-                            <h4>Pointe-Noire - Brazzaville</h4>
-                            <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
+                        <div class="price-dest">
+                            <h3>15 000 <span>Fcfa</span></h3>
                         </div>
                     </div>
                 </div>
                 <div class="box-tarif">
                     <div class="thum">
                         <img src="img/destination/brazzaville.jpg" alt="">
-                        <h3>15 000 <span>Fcfa</span></h3>
                     </div>
                     <div class="tarif-content">
                         <div class="location">
                             <h4>Pointe-Noire - Brazzaville</h4>
                             <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
                         </div>
+                        <div class="price-dest">
+                            <h3>15 000 <span>Fcfa</span></h3>
+                        </div>
                     </div>
                 </div>
                 <div class="box-tarif">
                     <div class="thum">
                         <img src="img/destination/brazzaville.jpg" alt="">
-                        <h3>15 000 <span>Fcfa</span></h3>
                     </div>
                     <div class="tarif-content">
                         <div class="location">
-                            <h4><span>Pointe-Noire</span> - <span>Brazzaville</span></h4>
+                            <h4>Pointe-Noire - Brazzaville</h4>
                             <p><i class="fa-regular fa-clock"></i> 6H - 7H</p>
+                        </div>
+                        <div class="price-dest">
+                            <h3>15 000 <span>Fcfa</span></h3>
                         </div>
                     </div>
                 </div>
