--- a/reserver.html
+++ b/reserver.html
@@ -94,6 +94,18 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
+                            <label for="gare_start">Gare de départ</label>
+                            <select name="gare_start" id="gare_start">
+                                <option value="0">Sélectionner une gare</option>
+                                <option value="1">OCH</option>
+                                <option value="2">NGOYO</option>
+                                <option value="3">OUENZE</option>
+                                <option value="4">MFILOU</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
                             <label for="city_end">Destination</label>
                             <select name="city_end" id="city_end">
                                 <option value="0">Sélectionner une ville</option>
@@ -101,6 +113,18 @@
                                 <option value="2">Brazzaville</option>
                                 <option value="3">Dolisie</option>
                                 <option value="4">Nkayi</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="gare_start">Gare d'arrivée'</label>
+                            <select name="gare_start" id="gare_start">
+                                <option value="0">Sélectionner une gare</option>
+                                <option value="1">OCH</option>
+                                <option value="2">NGOYO</option>
+                                <option value="3">OUENZE</option>
+                                <option value="4">MFILOU</option>
                             </select>
                         </div>
                     </div>
