--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     <!-- Contact -->
     <div class="container com-zephir">
       <div class="row">
-        <div class="col-md-9 col-sm-12">
+        <div class="col-md-12 col-sm-12 mb-3">
           <div class="contact">
             <div class="description">
               Vous pouvez nous contacter par téléphone, ou e-mail. Pour poser une question spécifique via
@@ -114,23 +114,29 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-sm-12">
-          <div class="address mt-4">
-            <div class="min-title">
-              ZOE T & L Pointe-Noire
+        <div class="col-md-12 col-sm-12 mt-4">
+          <div class="row">
+            <div class="col-md-6 col-sm-12">
+              <div class="address mt-4">
+                <div class="min-title">
+                  ZOE T & L Pointe-Noire
+                </div>
+                <div class="min-desc">
+                  <p><span>Tel :</span> 0278932372</p>
+                  <p><span>Mail :</span> contact@zoe.com</p>
+                </div>
+              </div>
             </div>
-            <div class="min-desc">
-              <p><span>Tel :</span> 0278932372</p>
-              <p><span>Mail :</span> contact@zoe.com</p>
-            </div>
-          </div>
-          <div class="address mt-4">
-            <div class="min-title">
-              ZOE T & L Brazzaville
-            </div>
-            <div class="min-desc">
-              <p><span>Tel :</span> 0278932372</p>
-              <p><span>Mail :</span> contact@zoe.com</p>
+            <div class="col-md-6 col-sm-12">
+              <div class="address mt-4">
+                <div class="min-title">
+                  ZOE T & L Brazzaville
+                </div>
+                <div class="min-desc">
+                  <p><span>Tel :</span> 0278932372</p>
+                  <p><span>Mail :</span> contact@zoe.com</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
