--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -24,7 +24,9 @@
     <!-- Menu de navigation -->
     <header class="header">
       <nav>
-        <img src="img/logo.png" alt="" class="logo">
+        <a href="index.html">
+          <img src="img/logo.png" alt="" class="logo">
+      </a>
         <button class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
         </button>
@@ -34,7 +36,7 @@
           <li><a href="contact.html">Contact</a></li>
           <li><a href="reserver.html">Réserver</a></li>
         </ul>
-        <a href="login.html" class="button">Connexion</a>
+        <a href="#" class="button">Déconnexion</a>
       </nav>
       <div class="nav-mobile">
         <div class="btn-close-menu">
