--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- Menu de navigation -->
     <div class="hero">
         <nav>
-            <img src="img/logo.png" alt="" class="logo">
+            <a href="index.html">
+                <img src="img/logo.png" alt="" class="logo">
+            </a>
             <button class="menu-toggle" id="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
