--- a/nos-tarifs.html
+++ b/nos-tarifs.html
@@ -17,7 +17,9 @@
         <!-- Menu de navigation -->
         <header class="header">
             <nav>
-                <img src="img/logo.png" alt="" class="logo">
+                <a href="index.html">
+                    <img src="img/logo.png" alt="" class="logo">
+                </a>
                 <button class="menu-toggle" id="menu-toggle">
                     <i class="fas fa-bars"></i>
                 </button>
