--- a/admin-ges-destination.html
+++ b/admin-ges-destination.html
@@ -210,8 +210,8 @@
                     <div class="form-edit">
                         <form action="">
                             <div class="user_pic">
-                                <img src="img/" alt="">
-                                <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                                <img src="img/profil-default.png" alt="" id="image_profile">
+                                <label for="add_pic" id="btn-add-pic"><i class="fas fa-camera-alt"></i></label>
                                 <input type="file" name="picture" id="add_pic">
                             </div>
                             <div class="form-group">
@@ -249,8 +249,8 @@
                     <div class="form-edit">
                         <form action="">
                             <div class="user_pic">
-                                <img src="img/" alt="">
-                                <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                                <img src="img/profil-default.png" alt="" id="image_profile">
+                                <label for="add_pic" id="btn-add-pic"><i class="fas fa-camera-alt"></i></label>
                                 <input type="file" name="picture" id="add_pic">
                             </div>
                             <div class="form-group">
