--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -26,7 +26,7 @@
       <nav>
         <a href="index.html">
           <img src="img/logo.png" alt="" class="logo">
-      </a>
+        </a>
         <button class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
         </button>
@@ -195,8 +195,8 @@
             <div class="form-edit">
               <form action="">
                 <div class="user_pic">
-                  <img src="img/" alt="">
-                  <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                  <img src="img/profil-default.png" alt="" id="image_profile">
+                  <label for="add_pic" id="btn-add-pic"><i class="fas fa-camera-alt"></i></label>
                   <input type="file" name="picture" id="add_pic">
                 </div>
                 <div class="form-group">
@@ -216,7 +216,8 @@
                   <input type="tel" name="phone" id="phone">
                 </div>
                 <div class="form-submit">
-                  <a href="#" data-bs-toggle="modal" data-bs-target="#editPassword" data-bs-dismiss="modal">Changer mot de passe</a href="#">
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#editPassword" data-bs-dismiss="modal">Changer mot
+                    de passe</a href="#">
                   <button type="submit">Mettre à jour</button>
                 </div>
               </form>
@@ -251,7 +252,8 @@
                   <input type="password" name="conf_pwd" id="conf_pwd" placeholder="Retapez votre nouveau mot de passe">
                 </div>
                 <div class="form-submit">
-                  <a href="#" data-bs-toggle="modal" data-bs-target="#editProfile" data-bs-dismiss="modal">Editer profil</a>
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#editProfile" data-bs-dismiss="modal">Editer
+                    profil</a>
                   <button type="submit">Mettre à jour</button>
                 </div>
               </form>
