--- a/register.html
+++ b/register.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
-  <title>ZOE | Transport et logistique</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
+    <title>ZOE | Transport et logistique</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <!-- Login -->
     <div class="auth-a">
         <div class="content  my-4">
-           <div class="d-flex justify-content-center mb-3">
+            <div class="d-flex justify-content-center mb-3">
                 <a href="index.html">
                     <img src="img/logo.png" width="150px" height="90px">
                 </a>
@@ -26,8 +26,8 @@
                 <form action="">
                     <h5>Inscription</h5>
                     <div class="user_pic">
-                        <img src="img/" alt="">
-                        <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                        <img src="img/profil-default.png" alt="" id="image_profile">
+                        <label for="add_pic" id="btn-add-pic"><i class="fas fa-camera-alt"></i></label>
                         <input type="file" name="picture" id="add_pic">
                     </div>
                     <div class="form-group">
@@ -62,10 +62,10 @@
     </div>
     <!-- /Login -->
 
-  <script src="vendors/jquery/jquery-3.6.1.min.js"></script>
-  <script src="vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendors/font-awesome/js/all.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="vendors/jquery/jquery-3.6.1.min.js"></script>
+    <script src="vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendors/font-awesome/js/all.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
