--- a/admin-index.html
+++ b/admin-index.html
@@ -21,8 +21,8 @@
         </div>
 
         <div class="items">
-            <li><i class="fa-solid fa-chart-pie"></i><a href="admin-index.html">Tableau de bord</a></li>
-            <li class="active"><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des
+            <li  class="active"><i class="fa-solid fa-chart-pie"></i><a href="admin-index.html">Tableau de bord</a></li>
+            <li><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des
                     destination</a></li>
             <li><i class="fa-solid fa-money-bill"></i><a href="admin-ges-tarifs.html">Gestion des tarifs</a></li>
             <li><i class="fa-solid fa-users"></i></i><a href="admin-ges-users.html">Gestion des utilisateurs</a></li>
