--- a/admin-mon-compte.html
+++ b/admin-mon-compte.html
@@ -52,48 +52,42 @@
 
         <div class="my-profile">
             <div class="info-pers">
-                <div class="user-profile row">
-                    <div class="col-md-3 col-sm-12">
+                <div class="user-profile">
+                    <div class="w-100">
                         <div class="img">
                             <img src="img/profile/profile.png" alt="" width="150px" height="150px">
                         </div>
                     </div>
-                    <div class="col-md-9 col-sm-12">
+                    <div class="w-100 mt-2">
                         <div class="prof row">
                             <div class="col-md-6 col-sm-12">
                                 <div class="prof-form">
-                                    <h5>Nom :</h5>
-                                    <span>ALaxander Poaty</span>
+                                    <h5>Nom : <span>ALaxander Poaty</span></h5>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="prof-form">
-                                    <h5>Email :</h5>
-                                    <span>alexander_p@gmail.com</span>
+                                    <h5>Email : <span>alexander_p@gmail.com</span></h5>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="prof-form">
-                                    <h5>Numéro :</h5>
-                                    <span>066065050</span>
+                                    <h5>Numéro : <span>066065050</span></h5>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="prof-form">
-                                    <h5>Date de naissance :</h5>
-                                    <span>1/1/1990</span>
+                                    <h5>Date de naissance : <span>1/1/1990</span></h5>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="prof-form">
-                                    <h5>Ville :</h5>
-                                    <span>Pointe-Noire</span>
+                                    <h5>Ville : <span>Pointe-Noire</span></h5>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="prof-form">
-                                    <h5>Rôle :</h5>
-                                    <span>Admin</span>
+                                    <h5>Rôle : <span>Admin</span></h5>
                                 </div>
                             </div>
                         </div>
